--- a/grasa_event_locator/templates/aboutContact.html
+++ b/grasa_event_locator/templates/aboutContact.html
@@ -1,84 +1,84 @@
-{% include "header.php" %}
+{% include "header.html" %}
 
 	<div class="container about-container">
-		
+
 		<div class="about-row">
             <br>
 			<h2 id="about">About Us</h2>
 			<span class="subhead">OUR STORY</span>
-			
+
 			<p class="main-content">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed nunc ac neque interdum euismod id sit amet purus. Nam ut dapibus purus, non laoreet lectus. Mauris et sollicitudin velit, malesuada aliquam neque. Mauris a vehicula erat, sit amet rhoncus ante. Praesent nulla mi, tincidunt et porttitor ac, congue in tellus. Aliquam erat volutpat. Nulla pretium non dolor sit amet euismod. Donec a metus id elit cursus fermentum a sed lectus. Integer iaculis blandit mauris, quis pharetra ex varius sit amet. Morbi suscipit magna lectus, et interdum tellus porttitor a. Pellentesque volutpat luctus consequat. Phasellus nisi lorem, sodales ac malesuada at, molestie non metus. Sed finibus tincidunt elit ac bibendum. Donec non diam efficitur, pulvinar arcu iaculis, congue tortor. Curabitur enim metus, condimentum pellentesque iaculis ac, auctor eu odio.</p>
 
             <p>Phasellus volutpat lacus sit amet mi aliquam ultrices. Sed dui nisl, fermentum sit amet commodo ut, auctor et arcu. Proin non erat ut justo euismod viverra. Nunc tempus rhoncus tellus ac efficitur. Sed vel tincidunt eros, non venenatis nunc. Maecenas blandit erat varius leo dictum, a sagittis diam viverra. Integer et libero nec est placerat tincidunt. Pellentesque egestas, justo vitae molestie tincidunt, risus ipsum blandit erat, ac egestas lacus urna sed ligula. Proin id accumsan lorem, vel blandit justo. Aenean pellentesque at lorem non tincidunt. Aliquam efficitur vitae mi at rhoncus. Proin rutrum facilisis mi, a facilisis nunc commodo vel. Ut pulvinar in diam non consectetur. Proin et tincidunt eros.
-	
-			
-			</p>		
+
+
+			</p>
 
 		</div>
-	
+
 	</div>
 	<div class="container contact-container">
-		
+
 				<h2 id="contact">Contact Us</h2>
 				<hr><br>
 				<div class="row">
-					
+
 					<div class="col-lg-3 address">
-						
+
 						<h5>Office Hours</h5>
 						<p>
 							Mon - Fri : 9am - 5pm <br>
 							Sat - Sun : closed
 						</p>
-						<br>												
-						<h5>Website</h5>						
+						<br>
+						<h5>Website</h5>
 							<a href="https://www.monroecounty.gov/" target="_blank"><i class="fa fa-globe"></i>
-							www.moroecounty.gov </a>							
-											
+							www.moroecounty.gov </a>
+
 					</div>
-					
-					<div class="col-lg-3 address">	
-					
+
+					<div class="col-lg-3 address">
+
 						<h5>Address</h5>
 						<p>
 							111 Monroe County <br>
 							New York 14623
-							
+
 						</p>
 					</div>
-					
+
 					<div class="col-lg-3 address">
-						
+
 						<h5 id="office">Call Us </h5>
-						
+
 						<h6> HR Office: </h6>
 							<a href="tel:+5951234567"><i class="fa fa-phone" aria-hidden="true"></i> (+1) 585-123-4567 </a><br>
-						
-						
-						<h6>IT Office: </h6>						
-							<a href="tel:+5951234567"><i class="fa fa-phone" aria-hidden="true"></i> (+1) 585-123-4567 </a><br>						
-						
+
+
+						<h6>IT Office: </h6>
+							<a href="tel:+5951234567"><i class="fa fa-phone" aria-hidden="true"></i> (+1) 585-123-4567 </a><br>
+
 					</div>
-					
+
 					<div class="col-lg-3 address">
-						
+
 						<h5 id="email">Email</h5>
-						
-						<h6> HR Office: </h6>						
+
+						<h6> HR Office: </h6>
 							<a href="mailto:johndoe@gmail.com"><i class="fa fa-envelope"></i>
 							johndoe@gmail.com</a>
-												
-						
-						<h6> IT Office: </h6>					
+
+
+						<h6> IT Office: </h6>
 							<a href="mailto:johndoe2@gmail.com"><i class="fa fa-envelope"></i>
 							johndoe@gmail.com</a>
-						
-						
+
+
 					</div>
 				</div>
 			</div>
-	
+
 	<div class="container social-container">
 		<div>
 			<a href="#" class="fa fa-facebook"></a>
@@ -86,5 +86,5 @@
 			<a href="#" class="fa fa-linkedin"></a>
 		</div>
 	</div>
-	
-{% include "footer.php" %}
+
+{% include "footer.html" %}
