--- a/grasa_event_locator/templates/allEvents.html
+++ b/grasa_event_locator/templates/allEvents.html
@@ -1,11 +1,11 @@
-{% include "header.php" %}
+{% include "header.html" %}
 <div class="row allUsersContainer">
     <div class="col-sm-12">
         <div class="twentyblock"></div>
         <h2 class="text-center">All Events</h2>
         <button type="button" class="btn btn-info float-left" style="margin-bottom: 10px;" id="backBtn"> <i class="fa fa-chevron-left" aria-hidden="true" ></i> Back to Admin Portal</button>
-        
-        
+
+
         <table class="table table-bordered">
               <thead class="thead-light">
                 <tr>
@@ -47,7 +47,7 @@
                     </div>
                   </div>
                 </div>
-                
+
                 {% endfor %}
               </tbody>
             </table>
@@ -58,8 +58,8 @@
 <script>
     var backBtn = document.getElementById('backBtn');
     backBtn.onclick = function(){
-        window.location = 'admin.php'
+        window.location = 'admin.html'
     }
 
 </script>
-{% include "footer.php" %}
+{% include "footer.html" %}
