--- a/grasa_event_locator/templates/changePWLogout.html
+++ b/grasa_event_locator/templates/changePWLogout.html
@@ -1,4 +1,4 @@
-{% include "header.php" %}
+{% include "header.html" %}
 
 
   <div class="form-changePW">
@@ -37,5 +37,5 @@ function myFunction() {
 }
 </script>
 
-{% include "footer.php" %}
+{% include "footer.html" %}
 
