--- a/grasa_event_locator/templates/allAdmins.html
+++ b/grasa_event_locator/templates/allAdmins.html
@@ -1,4 +1,4 @@
-{% include "header.php" %}
+{% include "header.html" %}
 <div class="row allUsersContainer">
     <div class="col-sm-12">
         <div class="twentyblock"></div>
@@ -14,9 +14,9 @@
         </div>
         {% endif %}
         <button type="button" class="btn btn-info float-left" style="margin-bottom: 10px;" id="backBtn"> <i class="fa fa-chevron-left" aria-hidden="true" ></i> Back to Admin Portal</button>
-        
+
         <button type="button" class="btn btn-success float-right" id="addAdmin" data-toggle="modal" data-target="#addadminModal"><i class="fa fa-user-plus" aria-hidden="true"></i> Add Admin</button>
-        
+
         <table class="table table-bordered">
               <thead class="thead-light">
                 <tr>
@@ -70,7 +70,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-    <form method="POST" action="allAdmins.php" id="theForm" class="needs-validation" novalidate>{% csrf_token %}
+    <form method="POST" action="allAdmins.html" id="theForm" class="needs-validation" novalidate>{% csrf_token %}
       <div class="modal-body">
 
         <div class="row">
@@ -125,9 +125,9 @@
 <script>
     var backBtn = document.getElementById('backBtn');
     backBtn.onclick = function(){
-        window.location = 'admin.php'
+        window.location = 'admin.html'
     }
-    
+
     //confirm password extra validation
     $('#confirmPW').keyup(function() {
       if ( document.getElementById("confirmPW").value != document.getElementById("myPW").value ) {
@@ -138,8 +138,8 @@
           }
       }
     });
-    
-   
+
+
     //password validation - Lei
     function myFunction() {
       var x = document.getElementById("myPW");
@@ -169,17 +169,17 @@
                 event.stopPropagation();
                 $('#confirmPW').addClass( "is-invalid" );
                 $('#confirmPW').css('border', 'solid 1px #dc3545')
-                $('#confirmPW').css('background-image', 'none'); 
+                $('#confirmPW').css('background-image', 'none');
             }else if (form.checkValidity() === false) {
                 event.preventDefault();
                 event.stopPropagation();
             }
             form.classList.add('was-validated');
-            
+
           }, false);
         });
       }, false);
     })();
 
 </script>
-{% include "footer.php" %}
+{% include "footer.html" %}
